[metadata]
name = ibmcloud-python-sdk
summary = IBM Cloud Python SDK
version = 1.1.3
license = Apache2
description = IBM Cloud Python SDK
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Gaëtan Trellu (goldyfruit) & James Régis
author_email = gaetan.trellu@gmail.com
url = https://github.com/goldyfruit/ibmcloud-python-sdk
project_urls =
    Documentation = https://goldyfruit.github.io/ibmcloud-python-sdk
    Source = https://github.com/goldyfruit/ibmcloud-python-sdk
    Issue = https://github.com/goldyfruit/ibmcloud-python-sdk/issues
classifier =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
keywords =
    ibm
    ibmcloud
    sdk
    api
    rest
platforms = any


[options]
python_requires = >=3.6
zip_safe = False
packages = find_namespace:
install_requires =
    PyYAML>=3.12
    softlayer==5.8.7
    PyJWT==2.4.0
    ibm-cos-sdk==2.6.2
    botocore==1.16.9
    pymemcache==3.2.0
